some cleanup; fixes #19328